--- a/Infinity Drones/Assembly-CSharp.csproj
+++ b/Infinity Drones/Assembly-CSharp.csproj
@@ -46,6 +46,7 @@
   </PropertyGroup>
   <ItemGroup>
      <Compile Include="Assets\Scripts\Bullet.cs" />
+     <Compile Include="Assets\Scripts\DetatchParticles.cs" />
      <Compile Include="Assets\Scripts\PhysicsBody.cs" />
      <Compile Include="Assets\Scripts\PlayerController.cs" />
      <Compile Include="Assets\Scripts\PlayerGun.cs" />
